# ChangeLog for dev-games/ggz-client-libs
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-games/ggz-client-libs/ChangeLog,v 1.37 2012/04/26 21:55:55 mr_bones_ Exp $

  26 Apr 2012; Michael Sterrett <mr_bones_@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  ignore broken linguas patch for now

  22 Apr 2012; Tupone Alfredo <tupone@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild,
  +files/ggz-client-libs-0.0.14.1-linguas.patch:
  Honor LINGUAS. Bug #407175 by Piotr Szymaniak

  19 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Do not install static-libs unless requested and remove not-required .la
  files.

  22 Jan 2010; Jonathan Callen <abcd@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Keyword ~amd64-linux/~x86-linux

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  arm/sh stable

  20 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Add ~sh

  05 Apr 2009; Peter Alfredsen <loki_val@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Fix keyword mixup.

  05 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Add ~arm

  01 Feb 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +files/ggz-client-libs-0.0.14.1-destdir.patch,
  ggz-client-libs-0.0.14.1.ebuild:
  add patch from Michael Edenfield to apply the DESTDIR string correctly (bug
  #237607)

  13 Nov 2008; Brent Baude <ranger@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Marking ggz-client-libs-0.0.14.1 ppc64 stable for bug 236971

  28 Oct 2008; Brent Baude <ranger@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Marking ggz-client-libs-0.0.14.1 ~ppc64 for gnome

  25 Sep 2008; Jeroen Roovers <jer@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Stable for HPPA (bug #236971).

  10 Sep 2008; Jeroen Roovers <jer@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Marked ~hppa too.
